# Tanki

./: .gitignore  README.md  dots.txt
docs/: ZPRprojektTanki.docx
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt  MessagePacker.h  PackedMessage.cpp  PackedMessage.h  packedmessage.h
src/app/Client/: CMakeLists.txt  ClientTcpConnection.cpp  ClientTcpConnection.h  client.cpp  main_client.cpp
src/app/Server/: CMakeLists.txt  main_server.cpp  server.cpp  session.cpp  session.h  ship.cpp  ship.h  tcpserver.cpp  tcpserver.h
src/app/client_lib/: CMakeLists.txt  ClientConnection.cpp  ClientConnection.h  Connection.h  Drawable.h  ExperimentalGrid.cpp  GameManager.cpp  GameManager.h  GameWindow.cpp  GameWindow.h  GlutFunctions.cpp  GlutFunctions.h  Grid.cpp  Grid.h  GridCell.cpp  GridCell.h  Observable.cpp  Observable.h  Observer.h  ShipCell.h  ship.cpp  ship.h
src/app/execs/: CMakeLists.txt  ClientInput.cpp  ClientInput.h  ClientOutput.cpp  ClientOutput.h  ConnectionBridge.cpp  ConnectionBridge.h  IInput.h  IOutput.cpp  IOutput.h  Input.h  PlayerInput.cpp  PlayerInput.h  PlayerOutput.cpp  PlayerOutput.h  client.cpp  gui.cpp  server.cpp
src/app/game_engine_lib/: AbstractShip.cpp  AbstractShip.h  BigGameShip.cpp  BigGameShip.h  BigShip.cpp  BigShip.h  CMakeLists.txt  ConnectionBridge.cpp  ConnectionBridge.h  Field.cpp  Field.h  FieldsUpdater.cpp  FieldsUpdater.h  Game.cpp  Game.h  GameEngine.cpp  GameEngine.h  GamePlayer.cpp  GamePlayer.h  GamePlayerBuilder.cpp  GamePlayerBuilder.h  GamePlayerOutput.cpp  GamePlayerOutput.h  GameShip.cpp  GameShip.h  GameShipAggregator.cpp  GameShipAggregator.h  Gameboard.cpp  Gameboard.h  GamesManager.cpp  GamesManager.h  HitObserver.cpp  HitObserver.h  IGameConfig.h  IPlayerInput.h  IPlayerOutput.h  IShip.h  PlayerBuilder.cpp  PlayerBuilder.h  PlayerFactory.cpp  (+16 more)
src/app/network_lib/: Acceptor.cpp  Acceptor.h  BasicAcceptor.cpp  CMakeLists.txt  Connection.cpp  Connection.h  ConnectionFactory.cpp  ConnectionFactory.h  ConnectionObserver.h  ConnectionPool.cpp  ConnectionPool.h  IoHarbour.cpp  IoHarbour.h  MessageHandler.cpp  MessageHandler.h  MessageHandlerPolicies.cpp  MessageHandlerPolicies.h  MessagePacker.cpp  MessagePacker.h  MessageSender.cpp  MessageSender.h  PoolingAcceptor.cpp  PoolingAcceptor.h  ProtobufConnection.cpp  ProtobufConnection.h  ProtobufConnectionFactory.cpp  ProtobufConnectionFactory.h  PythonInterpreter.cpp  PythonInterpreter.h
src/app/proto/: .tank.proto.swp  CMakeLists.txt  message.proto  stringdb.proto  tank.proto  test.proto
src/app/server_lib/: Acceptor.cpp  Acceptor.h  BasicAcceptor.h  CMakeLists.txt  Connection.cpp  Connection.h  IoHarbour.cpp  IoHarbour.h  MessageHandler.cpp  MessageHandler.h  Player.cpp  Player.h  ProtobufConnection.cpp  ProtobufConnection.h  network.cpp  network.h  session.h
src/test/: BigGameShipTest.cpp  CMakeLists.txt  FieldTest.cpp  FieldsUpdaterTest.cpp  GameShipTest.cpp  GameboardTest.cpp  GridCellTest.cpp  GridTest.cpp  MessagePackerTest.cpp  PackedMessageTest.cpp  PlayerTest.cpp  SmallGameShipTest.cpp  main_test.cpp  packedmessagetest.cpp  shiptest.cpp
src/test/client_lib/: CMakeLists.txt  GameManagerTest.cpp  GridCellTest.cpp  GridTest.cpp  shiptest.cpp
src/test/execs/: CMakeLists.txt  ConnectionBridgeTest.cpp  PlayerOutputTest.cpp
src/test/game_engine_lib/: BigGameShipTest.cpp  CMakeLists.txt  ConnectionBridgeTest.cpp  FieldTest.cpp  FieldsUpdaterTest.cpp  GameEngineTest.cpp  GamePlayerBuilderTest.cpp  GamePlayerTest.cpp  GameTest.cpp  GameboardTest.cpp  PyGameConfigTest.cpp  ShipFactoryMethodTest.cpp  SmallGameShipTest.cpp
src/test/gmock/src/: gmock_main.cc
src/test/network_lib/: AbstractConnectionTest.cpp  AcceptorTest.cpp  BasicAcceptorTest.cpp  CMakeLists.txt  ConnectionPoolTest.cpp  ConnectionTest.cpp  IoHarbourTest.cpp  MessageHandlerTest.cpp  MessagePackerTest.cpp  PythonInterpreterTest.cpp
src/test/server_lib/: CMakeLists.txt  ConnectionTest.cpp  IoHarbourTest.cpp  MessageHandlerTest.cpp
test_data/: print.py  test.py
tools/: boost_install.sh
